--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "13.4.12",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "typescript": "^5.0.0",
+  "@types/react": "^18.0.0",
+  "@types/node": "^18.0.0"
   },
   "devDependencies": {
     "typescript": "^5.0.0"
