--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "firebase": "^9.22.0",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
     "typescript": "^5.0.0",
-    "@types/react": "^18.0.0",
-    "@types/node": "^18.0.0"
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.0.0"
   }
 }
